--- a/.htaccess
+++ b/.htaccess
@@ -7,5 +7,5 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule !\.(pdf|js|ico|gif|jpg|png|css|rar|zip)$ index.phtml [L]
 
-#AddType application/x-httpd-php .php .phtml
-AddType text/html .php .phtml
+AddType application/x-httpd-php .php .phtml
+#AddType text/html .php .phtml
